--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </ul>
         <button type="button" class="mob-menu-open">
           <svg width="40" height="40">
-            <use href="images/icons.svg#mob-menu-open"></use>
+            <use href="./images/icons.svg#mob-menu-open"></use>
           </svg>
         </button>
         <div class="mob-menu is-hidden">
@@ -62,7 +62,7 @@
             <div class="mob-menu--top">
               <button type="button" class="mob-menu-close">
                 <svg class="mob-close-icon" width="40" height="40">
-                  <use href="images/icons.svg#mob-close"></use>
+                  <use href="./images/icons.svg#mob-close"></use>
                 </svg>
               </button>
               <ul class="mob-menu__list list">
@@ -217,26 +217,26 @@
               <picture>
                 <source
                   srcset="
-                    ./images/our-team/igor/igor-desk-1x.jpg  1x,
-                    /./images/our-team/igor/igor-desk-2x.jpg 2x
+                    ./images/our-team/igor/igor-desk-1x.jpg 1x,
+                    ./images/our-team/igor/igor-desk-2x.jpg 2x
                   "
                   media="(min-width:1200px)"
                 />
                 <source
                   srcset="
-                    ./images/our-team/igor/igor-tab-1x.jpg  1x,
-                    /./images/our-team/igor/igor-tab-2x.jpg 2x
+                    ./images/our-team/igor/igor-tab-1x.jpg 1x,
+                    ./images/our-team/igor/igor-tab-2x.jpg 2x
                   "
                   media="(min-width:768px)"
                 />
                 <source
                   srcset="
-                    ./images/our-team/igor/igor-1x.jpg  1x,
-                    /./images/our-team/igor/igor-2x.jpg 2x
+                    ./images/our-team/igor/igor-1x.jpg 1x,
+                    ./images/our-team/igor/igor-2x.jpg 2x
                   "
                   media="(min-width:480px)"
                 />
-                <img src="/images/our-team/igor/igor-desk-1x.jpg" alt="Игорь Демьяненко" />
+                <img src="./images/our-team/igor/igor-desk-1x.jpg" alt="Игорь Демьяненко" />
               </picture>
               <div class="team__item-content">
                 <h3 class="team__item-title">Игорь Демьяненко</h3>
@@ -284,7 +284,7 @@
                 />
                 <source
                   srcset="
-                    /images/our-team/olga/olga-tab-1x.jpg  1x,
+                    ./images/our-team/olga/olga-tab-1x.jpg 1x,
                     ./images/our-team/olga/olga-tab-2x.jpg 2x
                   "
                   media="(min-width:768px)"
@@ -296,7 +296,7 @@
                   "
                   media="(min-width:480px)"
                 />
-                <img src="/images/our-team/olga/olga-desk-1x.jpg" alt="Ольга Репина" />
+                <img src="index.html" alt="Ольга Репина" />
               </picture>
               <div class="team__item-content">
                 <h3 class="team__item-title">Ольга Репина</h3>
@@ -356,7 +356,7 @@
                   "
                   media="(min-width:480px)"
                 />
-                <img src="/images/our-team/nikolas/nikolas-desk-1x.jpg" alt="Николай Тарасов" />
+                <img src="./images/our-team/nikolas/nikolas-desk-1x.jpg" alt="Николай Тарасов" />
               </picture>
               <div class="team__item-content">
                 <h3 class="team__item-title">Николай Тарасов</h3>
@@ -617,7 +617,7 @@
                 required="required"
               />
               <svg class="modal-icon" width="12" height="12">
-                <use href="images/icons.svg#icon-user"></use>
+                <use href="./images/icons.svg#icon-user"></use>
               </svg>
             </div>
           </div>
@@ -633,7 +633,7 @@
                 required
               />
               <svg class="modal-icon" width="13" height="13">
-                <use href="images/icons.svg#icon-tel"></use>
+                <use href="./images/icons.svg#icon-tel"></use>
               </svg>
             </div>
           </div>
@@ -642,7 +642,7 @@
             <div class="modal__input-wrap">
               <input type="email" name="user-email" id="user-email" class="modal__input" />
               <svg class="modal-icon" width="15" height="12">
-                <use href="images/icons.svg#icon-email"></use>
+                <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
