--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
         </ul>
         <button type="button" class="mob-menu-open">
           <svg width="40" height="40">
-            <use href="images/icons.svg#mob-menu-open"></use>
+            <use href="./images/icons.svg#mob-menu-open"></use>
           </svg>
         </button>
         <div class="mob-menu is-hidden">
@@ -61,7 +61,7 @@
             <div class="mob-menu--top">
               <button type="button" class="mob-menu-close">
                 <svg class="mob-close-icon" width="40" height="40">
-                  <use href="images/icons.svg#mob-close"></use>
+                  <use href="./images/icons.svg#mob-close"></use>
                 </svg>
               </button>
               <ul class="mob-menu__list list">
@@ -134,10 +134,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/laptop1-desk.jpg  1x,
-                    ./images/portfolios/desk/laptop1-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/laptop1-desk.jpg    1x,
+                        ./images/portfolios/desk/laptop1-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
@@ -173,10 +173,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/poster-desk.jpg  1x,
-                    ./images/portfolios/desk/poster-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/poster-desk.jpg    1x,
+                        ./images/portfolios/desk/poster-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
@@ -212,10 +212,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/restaurant-desk.jpg  1x,
-                    ./images/portfolios/desk/restaurant-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/restaurant-desk.jpg    1x,
+                        ./images/portfolios/desk/restaurant-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
@@ -249,10 +249,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/headphones-desk.jpg  1x,
-                    ./images/portfolios/desk/headphones-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/headphones-desk.jpg    1x,
+                        ./images/portfolios/desk/headphones-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
@@ -286,10 +286,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/boxes-desk.jpg  1x,
-                    ./images/portfolios/desk/boxes-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/boxes-desk.jpg    1x,
+                        ./images/portfolios/desk/boxes-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
@@ -323,10 +323,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/inspiration-desk.jpg  1x,
-                    ./images/portfolios/desk/inspiration-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/inspiration-desk.jpg    1x,
+                        ./images/portfolios/desk/inspiration-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
@@ -362,10 +362,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/book-desk.jpg  1x,
-                    ./images/portfolios/desk/book-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/book-desk.jpg    1x,
+                        ./images/portfolios/desk/book-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
@@ -401,10 +401,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/lab-desk.jpg  1x,
-                    ./images/portfolios/desk/lab-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/lab-desk.jpg    1x,
+                        ./images/portfolios/desk/lab-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
@@ -438,10 +438,10 @@
                 <div class="portfolio__item-wrap">
                   <picture class="portfolio-img">
                     <source
-                      srcset="/images/portfolios/desk/.jpg
-                    ./images/portfolios/desk/laptop2-desk.jpg  1x,
-                    ./images/portfolios/desk/laptop2-desk-2x.jpg 2x
-                  "
+                      srcset="
+                        ./images/portfolios/desk/laptop2-desk.jpg    1x,
+                        ./images/portfolios/desk/laptop2-desk-2x.jpg 2x
+                      "
                       media="(min-width:1200px)"
                     />
                     <source
