--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                   "
                   media="(min-width:480px)"
                 />
-                <img src="index.html" alt="Ольга Репина" />
+                <img src="./images/our-team/olga/olga-desk-1x.jpg" alt="Ольга Репина" />
               </picture>
               <div class="team__item-content">
                 <h3 class="team__item-title">Ольга Репина</h3>
